[gd_scene load_steps=18 format=3 uid="uid://c5l4hqhvbhlyj"]

[ext_resource type="Theme" uid="uid://dk1lq0oeybxad" path="res://ui/theme.tres" id="1_jhfuf"]
[ext_resource type="Script" path="res://levels/fights/fight_transition.gd" id="2_u1fc6"]
[ext_resource type="AudioStream" uid="uid://d3cl0e5lotj3g" path="res://audios/effects/ui/game-start2.wav" id="3_h6pob"]
[ext_resource type="Script" path="res://ui/game_over/game_over.gd" id="4_cgq8w"]
[ext_resource type="AudioStream" uid="uid://bu41dw2kqfu3l" path="res://audios/musics/game_over.mp3" id="5_c6tqm"]
[ext_resource type="AudioStream" uid="uid://03eaf8f8e41o" path="res://audios/effects/death.wav" id="6_xt5t1"]
[ext_resource type="Texture2D" uid="uid://cvj3g8utd2nb0" path="res://assets/utils/crosshair.png" id="7_3bnj0"]
[ext_resource type="Script" path="res://ui/crosshair.gd" id="8_vlxcy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bwk67"]
bg_color = Color(0.0823529, 0.113725, 0.156863, 1)
border_width_bottom = 4
border_color = Color(0.0241445, 0.0396609, 0.0639868, 1)
border_blend = true
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2roa4"]
bg_color = Color(0.318009, 0.598137, 9.62615e-07, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2fr33"]
bg_color = Color(0.894118, 0.231373, 0.266667, 1)

[sub_resource type="Animation" id="Animation_vlkrs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Subtitle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Title:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(48, 221)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Subtitle:visible_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Background:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3c4mq"]
resource_name = "intro"
length = 4.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333, 3, 3.93333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Subtitle:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 3.43333, 3.93333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Title:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(148, 221), Vector2(48, 221)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Subtitle:visible_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Background:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(3, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1i78g"]
_data = {
"RESET": SubResource("Animation_vlkrs"),
"intro": SubResource("Animation_3c4mq")
}

[sub_resource type="Animation" id="Animation_80ekd"]
resource_name = "GameOver"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Music:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Death:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7iggc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Music:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Death:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_16f7o"]
_data = {
"GameOver": SubResource("Animation_80ekd"),
"RESET": SubResource("Animation_7iggc")
}

[node name="Canvas" type="CanvasLayer"]

[node name="Container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_jhfuf")

[node name="PlayerHealth" type="Control" parent="Container"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 14.0
offset_top = -37.0
offset_right = 178.0
offset_bottom = -14.0
grow_vertical = 0

[node name="Name" type="Label" parent="Container/PlayerHealth"]
layout_mode = 1
offset_right = 59.0
offset_bottom = 14.0
text = "Health"
uppercase = true

[node name="ProgressBar" type="ProgressBar" parent="Container/PlayerHealth"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_bwk67")
theme_override_styles/fill = SubResource("StyleBoxFlat_2roa4")
value = 83.38
show_percentage = false

[node name="Value" type="Label" parent="Container/PlayerHealth"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 14.0
grow_horizontal = 0
text = "5/5"

[node name="BossHealth" type="VBoxContainer" parent="Container"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -248.0
offset_top = -58.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0

[node name="Name" type="RichTextLabel" parent="Container/BossHealth"]
clip_contents = false
layout_mode = 2
theme_override_colors/default_color = Color(0.894118, 0.231373, 0.266667, 1)
bbcode_enabled = true
text = "[right][wave]BOSS[/wave][/right]"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="ProgressBar" type="ProgressBar" parent="Container/BossHealth"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_bwk67")
theme_override_styles/fill = SubResource("StyleBoxFlat_2fr33")
step = 1.0
fill_mode = 1
show_percentage = false

[node name="Transition" type="Control" parent="Container"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_u1fc6")
metadata/_edit_lock_ = true

[node name="Background" type="ColorRect" parent="Container/Transition"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="Title" type="RichTextLabel" parent="Container/Transition"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 48.0
offset_top = -139.0
offset_right = 622.0
offset_bottom = -48.0
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 72
bbcode_enabled = true
text = "[wave]Boss 1[/wave]"

[node name="Subtitle" type="RichTextLabel" parent="Container/Transition"]
clip_contents = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = -59.0
offset_right = 340.0
offset_bottom = -40.0
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[shake]123 light-years from Earth[/shake]"
scroll_active = false

[node name="Sound" type="AudioStreamPlayer" parent="Container/Transition"]
stream = ExtResource("3_h6pob")
autoplay = true
bus = &"Effects"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Container/Transition"]
libraries = {
"": SubResource("AnimationLibrary_1i78g")
}
autoplay = "intro"

[node name="GameOver" type="VBoxContainer" parent="Container"]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -276.0
offset_top = -50.0
offset_right = 276.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_cgq8w")

[node name="Title" type="Label" parent="Container/GameOver"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Game Over"
uppercase = true

[node name="Subtitle" type="Label" parent="Container/GameOver"]
layout_mode = 2
text = "Your ship has been destroyed."
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Container/GameOver"]
libraries = {
"": SubResource("AnimationLibrary_16f7o")
}

[node name="Music" type="AudioStreamPlayer" parent="Container/GameOver"]
stream = ExtResource("5_c6tqm")
volume_db = -4.0
bus = &"Music"

[node name="Death" type="AudioStreamPlayer" parent="Container/GameOver"]
stream = ExtResource("6_xt5t1")
bus = &"Music"

[node name="Restart" type="Button" parent="Container/GameOver"]
visible = false
layout_mode = 2
text = "Restart fight"

[node name="Crosshair" type="TextureRect" parent="Container"]
layout_mode = 0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
scale = Vector2(0.6, 0.6)
pivot_offset = Vector2(20, 20)
texture = ExtResource("7_3bnj0")
expand_mode = 1
stretch_mode = 5
script = ExtResource("8_vlxcy")

[connection signal="animation_finished" from="Container/Transition/AnimationPlayer" to="Container/Transition" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="Container/GameOver/AnimationPlayer" to="Container/GameOver" method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="Container/GameOver/Restart" to="Container/GameOver" method="_on_restart_pressed"]
